--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "babel-preset-stage-1": "^6.1.18",
+    "bootstrap": "^3.3.7",
+    "lodash": "^3.10.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.2",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.0.1",
+    "react-sparklines": "^1.6.0",
+    "redux": "^3.0.4",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
